--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p>Ссылка на условия и положения сторонних поставщиков услуг, используемых приложением:
                 <li><a href="https://play.google.com">Google Play Services
                 </a></li>
-                <li><a href="https://apps.admob.com">AdMob
+                <li><a href="https://appodeal.com">Appodeal
                 </a></li>
             </p>
             <p>Вы должны знать, что есть определенные вещи, за которые Art Programs не возьмут на себя ответственность.
